--- a/spells-research.html
+++ b/spells-research.html
@@ -195,12 +195,26 @@
       </h2>
       <div class="bg-slate-800 bg-opacity-70 p-6 rounded-xl shadow-lg border border-slate-700">
         <p class="text-gray-300 mb-4">
+          <strong>เรียน Dunamancy Spells:</strong><br>
+          🟣Dunamancy นับเป็นเวทย์ของ Wizard แต่มีแค่สาย Chronurgy กับ Graviturgy<br>
+          เท่านั้นที่สามารถเรียนได้โดยไม่ต้องจ่ายทองและ Favor<br>
+          🟣Dunamancy ที่เรียนจาก feats หรือ class features ไม่ต้องจ่ายทองและ Favor<br>
+          🟣Sorcerers, Bards, Warlocks, Rangers, Druids, Clerics, Artificers, Paladins, Arcane Trickster Rogues,
+          Eldritch
+          Knights, Profane Soul Blood hunters,<br> และ Heretic Jaeger สามารถเลือก Dunamancy แทนที่เวทย์ที่มีอยู่ได้<br>
+          <strong>ใครสามารถเข้าถึง Dunamancy Spells ได้บ้าง?</strong><br>
+          🟣Dunamancy spells สามารถเรียนได้โดยตัวละครต้องจ่าย 5 Favor และ 50 ทองทุกๆ 1 เลเวลของเวทย์ที่จะเรียน ยกเว้น Wizard สาย Chronurgy และ Graviturgy<br>
+          🟣เวทย์ที่จะศึกษาและใช้ ต้องเป็นเวทย์ที่ตัวละครสามารถใช้ได้ในเลเวลนั้นๆและไม่ใช่เวทย์ Cantrip<br>
+          🟣ตัวละครต้องทำ Intelligence check เพื่อเรียน Dunamancy spell โดย DC จะอยู่ที่ 10+เลเวลของเวทย์ที่จะเรียน<br>
+          ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม 100gp โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
+          <br>
           <strong>เงื่อนไข:</strong> ต้องมี <span class="text-green-400">5 Favor</span> และเสีย <span
             class="text-blue-400">50 GP</span> ทุกๆ 1 เลเวลต่อเวทย์ที่จะเรียน ยกเว้น Wizard สาย Chronurgy และ
           Graviturgy<br>
           🔍 ต้องผ่าน <strong>Intelligence Check</strong> เพื่อเรียน Dunamancy spell <span class="text-blue-400">โดย DC
             จะอยู่ที่ 10 + เลเวลของเวทย์ที่จะเรียน</span><br>
-          ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม 100 gp โดยสามารถได้รับโบนัสได้มากสุดที่ +6
+          ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม 100 gp โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
+          💡ตัวละครที่เรียน Dunamancy spell สามารถใช้ spell scrolls เพื่อร่ายได้ตามปกติ
         </p>
 
         <!-- ตารางค่า Favor ที่ต้องใช้ -->
