spells-research fix

--- a/spells-research.html
+++ b/spells-research.html
@@ -66,13 +66,14 @@
 
   <div class="container mx-auto px-4 py-12 max-w-6xl">
 
-    <!-- หัวข้อหลัก -->
+    <!-- หัวข้อหลัก 
     <h1 class="text-4xl font-bold text-center mb-4 text-indigo-300">Drakkenheim Spell System</h1>
-    <p class="text-center text-gray-300 mb-12">ระบบเวทมนตร์ลับจากโลกแห่งความมืดและการบิดเบือนกาลเวลา</p>
+    <p class="text-center text-gray-300 mb-12">ระบบเวทมนตร์ลับจากโลกแห่งความมืดและการบิดเบือนกาลเวลา</p> -->
 
     <!-- คำเตือน -->
     <div class="bg-yellow-900 bg-opacity-30 border-l-4 border-yellow-500 p-4 mb-8 rounded">
-      <p class="text-yellow-200"><strong>Note:</strong> เวทมนตร์บางชนิดต้องผ่าน Live Session และผู้เล่นต้องบันทึกใน
+      <p class="text-yellow-200"><strong>Note:</strong> เวทย์มนต์ของ Drakkenheim
+        บางอันมีข้อจำกัดที่ต้องสำเร็จก่อนที่จะศึกษาได้ โดยผู้เล่นต้องไปทำใน Live Session และผู้เล่นต้องบันทึกใน
         <code class="bg-black px-1 rounded">#spells-research</code> ส่วนให้ DM บันทึกผลไว้ใน <code
           class="bg-black px-1 rounded">#บันทึกเอฟเฟคถาวร</code> เมื่อผู้เล่นทำสำเร็จ
       </p>
@@ -86,16 +87,21 @@
       </h2>
       <div class="bg-slate-800 bg-opacity-70 p-6 rounded-xl shadow-lg border border-slate-700">
         <p class="text-gray-300 mb-4">
-          <strong>เงื่อนไข:</strong> ต้องมี <span class="text-green-400">5 Favor</span> และเสีย <span
-            class="text-blue-400">250 GP</span> ต่อเวท<br>
+          <strong>ใครสามารถเข้าถึง Drakkenheim Spells ได้บ้าง?</strong><br>
+          ⚠️ เวทย์มนต์ Drakkenheim เป็นเวทย์เฉพาะคลาสและมีแค่คลาสที่ระบุเอาไว้เท่านั้นที่จะศึกษาเวทย์พวกนี้ได้<br>
           ⚠️ เวทย์ของ Drakkenheim ไม่สามารถศึกษาโดยเลือก feat หรือจาก class features, และไม่สามารถคัดลอกโดย Wish หรือ
-          Mizzium Apparatus
-          <br>⚠️ เวทย์มนต์ Drakkenheim เป็นเวทย์เฉพาะคลาสและมีแค่คลาสที่ระบุเอาไว้เท่านั้นที่จะศึกษาเวทย์พวกนี้ได้
-          <br>⚠️ เวทย์ที่จะศึกษาและใช้ ต้องเป็นเวทย์ที่ตัวละครสามารถใช้ได้ในเลเวลนั้นๆ
-          <br>⚠️ เมื่อทำการศึกษาสำเร็จ ตัวละครสามารถเพิ่มเวทย์เหล่านั้นในตัวได้ ไม่ว่าจะโดย prepare, เพิ่มใส่ spellbook,
-          หรือแทนที่เวทย์ที่มีอยู่แล้วก่อนหน้า โดยขึ้นอยู่กับว่าตัวละครอยู่ในคลาสอะไร
-          <br>⚠️ เนื่องจากเวทย์เหล่านี้ใช้ Delirium เป็นวัตถุดิบหลักในการร่าย scrolls และ spellwrought tattoos
-          จะไม่สามารถใช้เวทย์ประเภทนี้ได้
+          Mizzium Apparatus<br>
+          ⚠️ เวทย์ที่จะศึกษาและใช้ ต้องเป็นเวทย์ที่ตัวละครสามารถใช้ได้ในเลเวลนั้นๆ<br>
+          ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม <span class="text-yellow-400">100 gp</span>
+          โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
+          ⚠️ เมื่อทำการศึกษาสำเร็จ ตัวละครสามารถเพิ่มเวทย์เหล่านั้นในตัวได้ ไม่ว่าจะโดย prepare, เพิ่มใส่ spellbook,
+          หรือแทนที่เวทย์ที่มีอยู่แล้วก่อนหน้า โดยขึ้นอยู่กับว่าตัวละครอยู่ในคลาสอะไร<br>
+          ⚠️ เนื่องจากเวทย์เหล่านี้ใช้ Delirium เป็นวัตถุดิบหลักในการร่าย scrolls และ spellwrought tattoos
+          จะไม่สามารถใช้เวทย์ประเภทนี้ได้<br>
+          <br>
+          <strong>เงื่อนไข:</strong> ต้องมี <span class="text-green-400">5 Favor</span> และเสีย <span
+            class="text-yellow-400">250 GP</span> ทุกๆ 1
+          เลเวลของเวทย์มนต์ที่จะศึกษาและบางอันก็จะมีข้อจำกัดที่ต้องทำก่อนทีจะศึกษาได้<br>
         </p>
 
         <!-- เวทจำแนกตามระดับ -->
@@ -203,17 +209,14 @@
           Eldritch
           Knights, Profane Soul Blood hunters,<br> และ Heretic Jaeger สามารถเลือก Dunamancy แทนที่เวทย์ที่มีอยู่ได้<br>
           <strong>ใครสามารถเข้าถึง Dunamancy Spells ได้บ้าง?</strong><br>
-          🟣Dunamancy spells สามารถเรียนได้โดยตัวละครต้องจ่าย 5 Favor และ 50 ทองทุกๆ 1 เลเวลของเวทย์ที่จะเรียน ยกเว้น Wizard สาย Chronurgy และ Graviturgy<br>
-          🟣เวทย์ที่จะศึกษาและใช้ ต้องเป็นเวทย์ที่ตัวละครสามารถใช้ได้ในเลเวลนั้นๆและไม่ใช่เวทย์ Cantrip<br>
-          🟣ตัวละครต้องทำ Intelligence check เพื่อเรียน Dunamancy spell โดย DC จะอยู่ที่ 10+เลเวลของเวทย์ที่จะเรียน<br>
-          ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม 100gp โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
-          <br>
-          <strong>เงื่อนไข:</strong> ต้องมี <span class="text-green-400">5 Favor</span> และเสีย <span
-            class="text-blue-400">50 GP</span> ทุกๆ 1 เลเวลต่อเวทย์ที่จะเรียน ยกเว้น Wizard สาย Chronurgy และ
+          🪙ต้องมี <span class="text-green-400">5 Favor</span> และเสีย <span class="text-yellow-400">50 GP</span> ทุกๆ 1
+          เลเวลต่อเวทย์ที่จะเรียน ยกเว้น Wizard สาย Chronurgy และ
           Graviturgy<br>
+          🧠เวทย์ที่จะศึกษาและใช้ ต้องเป็นเวทย์ที่ตัวละครสามารถใช้ได้ในเลเวลนั้นๆและไม่ใช่เวทย์ Cantrip<br>
           🔍 ต้องผ่าน <strong>Intelligence Check</strong> เพื่อเรียน Dunamancy spell <span class="text-blue-400">โดย DC
             จะอยู่ที่ 10 + เลเวลของเวทย์ที่จะเรียน</span><br>
           ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม 100 gp โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
+          <br>
           💡ตัวละครที่เรียน Dunamancy spell สามารถใช้ spell scrolls เพื่อร่ายได้ตามปกติ
         </p>
 
