--- a/spells-research.html
+++ b/spells-research.html
@@ -214,7 +214,7 @@
           Graviturgy<br>
           🧠เวทย์ที่จะศึกษาและใช้ ต้องเป็นเวทย์ที่ตัวละครสามารถใช้ได้ในเลเวลนั้นๆและไม่ใช่เวทย์ Cantrip<br>
           🔍 ต้องผ่าน <strong>Intelligence Check</strong> เพื่อเรียน Dunamancy spell <span class="text-blue-400">โดย DC
-            จะอยู่ที่ 10 + เลเวลของเวทย์ที่จะเรียน</span><br>
+            จะอยู่ที่ 10 + เลเวลของเวทย์มนต์ที่จะเรียน</span><br>
           ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม 100 gp โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
           <br>
           💡ตัวละครที่เรียน Dunamancy spell สามารถใช้ spell scrolls เพื่อร่ายได้ตามปกติ
