--- a/spells-research.html
+++ b/spells-research.html
@@ -193,6 +193,15 @@
       </div>
     </section>
 
+    <!-- คำเตือน -->
+    <div class="bg-yellow-900 bg-opacity-30 border-l-4 border-yellow-500 p-4 mb-8 rounded">
+      <p class="text-yellow-200"><strong>Note:</strong> เวทย์มนต์ของ Drakkenheim
+        บางอันมีข้อจำกัดที่ต้องสำเร็จก่อนที่จะศึกษาได้ โดยผู้เล่นต้องไปทำใน Live Session และผู้เล่นต้องบันทึกใน
+        <code class="bg-black px-1 rounded">#spells-research</code> ส่วนให้ DM บันทึกผลไว้ใน <code
+          class="bg-black px-1 rounded">#บันทึกเอฟเฟคถาวร</code> เมื่อผู้เล่นทำสำเร็จ
+      </p>
+    </div>
+
     <!-- Dunamancy Spells -->
     <section class="mb-16">
       <h2 class="text-3xl font-semibold mb-6 flex items-center text-cyan-300">
@@ -213,30 +222,14 @@
           เลเวลต่อเวทย์ที่จะเรียน ยกเว้น Wizard สาย Chronurgy และ
           Graviturgy<br>
           🧠เวทย์ที่จะศึกษาและใช้ ต้องเป็นเวทย์ที่ตัวละครสามารถใช้ได้ในเลเวลนั้นๆและไม่ใช่เวทย์ Cantrip<br>
-          🔍 ตัวละครต้องผ่านการทำ <strong>Intelligence Check</strong> เพื่อเรียน Dunamancy spell <span class="text-blue-400">โดย DC
+          🔍 ตัวละครต้องผ่านการทำ <strong>Intelligence Check</strong> เพื่อเรียน Dunamancy spell <span
+            class="text-blue-400">โดย DC
             จะอยู่ที่ 10 + เลเวลของเวทย์มนต์ที่จะเรียน</span><br>
-          ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม <span class="text-yellow-400">100 gp</span> โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
+          ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม <span class="text-yellow-400">100 gp</span>
+          โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
           <br>
           💡ตัวละครที่เรียน Dunamancy spell สามารถใช้ spell scrolls เพื่อร่ายได้ตามปกติ
         </p>
-
-        <!-- ตารางค่า Favor ที่ต้องใช้ -->
-        <div class="mt-6">
-          <h3 class="font-semibold text-cyan-200 mb-3">Favor ที่ต้องใช้ต่อเวท</h3>
-          <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-3 text-sm">
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Cantrips: <span class="font-bold">25 Favor</span>
-            </div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.1: <span class="font-bold">10 Favor</span></div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.2: <span class="font-bold">20 Favor</span></div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.3: <span class="font-bold">30 Favor</span></div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.4: <span class="font-bold">40 Favor</span></div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.5: <span class="font-bold">50 Favor</span></div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.6: <span class="font-bold">65 Favor</span></div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.7: <span class="font-bold">80 Favor</span></div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.8: <span class="font-bold">95 Favor</span></div>
-            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.9: <span class="font-bold">110 Favor</span></div>
-          </div>
-        </div>
 
         <!-- ประเภทตัวละครที่ใช้ได้ -->
         <div class="mt-8">
@@ -254,11 +247,8 @@
               </div>
               <h4 class="font-medium text-yellow-300">Known Caster</h4>
               <p class="text-gray-300">
-                ถ้าตัวละครเป็นคลาสสายที่เลือกเวทย์มนต์ใหม่และจะไม่สามารถเปลี่ยนได้จนกว่าจะเลเวลอัพ<br>
                 Sorcerer, Warlock, Bard, Ranger, Arcane Trickster Rogue, Eldritch Knight Fighter,
-                Profane Soul Blood Hunter, Heretic Jaeger<br> แล้วเปลี่ยนใจอยากเลือกเวทย์มนต์อื่นแทน ตัวละครสามารถใช้
-                Favor
-                เพื่อเปลี่ยนเวทย์มนต์เหล่านั้นได้โดยจำนวน Favor ที่ใช้จะขึ้นอยู่กับเลเวลของเวทย์นั้นๆ</p>
+                Profane Soul Blood Hunter, Heretic Jaeger<br> สามารถแทนที่เวทย์ที่มีอยู่แล้วได้</p>
             </div>
             <div>
               <h4 class="font-medium text-yellow-300">Prepared Caster</h4>
@@ -268,6 +258,39 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- Known caster -->
+    <section class="mb-16">
+      <h2 class="text-3xl font-semibold mb-6 flex items-center text-green-300">
+        <span class="w-3 h-3 bg-cyan-500 rounded-full mr-3"></span>
+        Known caster
+      </h2>
+      <div class="bg-slate-800 bg-opacity-70 p-6 rounded-xl shadow-lg border border-slate-700">
+        <p class="text-gray-300 mb-4">
+          <strong>เรียน Dunamancy Spells:</strong><br>
+          🟣ถ้าตัวละครเป็นคลาสสายที่เลือกเวทย์มนต์ใหม่และจะไม่สามารถเปลี่ยนได้จนกว่าจะเลเวลอัพ ( Sorcerer, Warlock,
+          Bard, Ranger, Arcane Tricksters Rogue, Eldritch Knights Fighter, Profane Soul Blood hunters, และ Heretic
+          Jaeger) แล้วเปลี่ยนใจอยากเลือกเวทย์มนต์อื่นแทน ตัวละครสามารถใช้ Favor
+          เพื่อเปลี่ยนเวทย์มนต์เหล่านั้นได้โดยจำนวน Favor ที่ใช้จะขึ้นอยู่กับเลเวลของเวทย์นั้นๆ
+        </p>
+        <!-- ตารางค่า Favor ที่ต้องใช้ -->
+        <div class="mt-6">
+          <h3 class="font-semibold text-cyan-200 mb-3">Favor ที่ต้องใช้ต่อเวท</h3>
+          <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-3 text-sm">
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Cantrips: <span class="font-bold">25 Favor</span>
+            </div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.1: <span class="font-bold">10 Favor</span></div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.2: <span class="font-bold">20 Favor</span></div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.3: <span class="font-bold">30 Favor</span></div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.4: <span class="font-bold">40 Favor</span></div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.5: <span class="font-bold">50 Favor</span></div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.6: <span class="font-bold">65 Favor</span></div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.7: <span class="font-bold">80 Favor</span></div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.8: <span class="font-bold">95 Favor</span></div>
+            <div class="bg-slate-700 px-3 py-2 rounded text-center">Lv.9: <span class="font-bold">110 Favor</span></div>
+          </div>
+        </div>
     </section>
 
     <!-- Wizard-specific spell rules -->
