--- a/spells-research.html
+++ b/spells-research.html
@@ -268,7 +268,7 @@
       </h2>
       <div class="bg-slate-800 bg-opacity-70 p-6 rounded-xl shadow-lg border border-slate-700">
         <p class="text-gray-300 mb-4">
-          <strong>เรียน Dunamancy Spells:</strong><br>
+          <strong>เปลี่ยนเวทย์มนต์ที่มีสำหรับ Known caster:</strong><br>
           🟣ถ้าตัวละครเป็นคลาสสายที่เลือกเวทย์มนต์ใหม่และจะไม่สามารถเปลี่ยนได้จนกว่าจะเลเวลอัพ ( Sorcerer, Warlock,
           Bard, Ranger, Arcane Tricksters Rogue, Eldritch Knights Fighter, Profane Soul Blood hunters, และ Heretic
           Jaeger) แล้วเปลี่ยนใจอยากเลือกเวทย์มนต์อื่นแทน ตัวละครสามารถใช้ Favor
