--- a/spells-research.html
+++ b/spells-research.html
@@ -324,16 +324,10 @@
 
       <!-- ตัวอย่างเวทมนตร์ -->
       <h3 class="text-xl font-bold mb-2 text-purple-300">ตัวอย่าง:</h3>
-      <ul class="list-disc pl-4 text-gray-300 space-y-1">
-        <li>detect magic</li>
-        <li>identify</li>
-        <li>comprehend languages</li>
-        <li>catapult</li>
-        <li>augury</li>
-        <li>detect thoughts</li>
-        <li>mind spike</li>
-        <li>locate object</li>
-        <li>see invisibility</li>
+      <ul class="list pl-4 text-gray-300 space-y-1 text-purple-300">
+        <li>สมรัก ผนึกมาร ทำการคัดลอกเวทย์มนต์จาก Spellbook ของ สมหมาย มหาเวทย์</li>
+        <li>ค่าใช้จ่าย: 350 gp + 2 Favor</li>
+        <li>ผลลัพธ์: คัดลอกเวทย์มนต์เลเวล 1 และ 2 (detect magic, identify, comprehend languages, catapult, augury, detect thoughts, mind spike, locate object, see invisibility)</li>
       </ul>
 
     </div>
