--- a/spells-research.html
+++ b/spells-research.html
@@ -92,8 +92,6 @@
           ⚠️ เวทย์ของ Drakkenheim ไม่สามารถศึกษาโดยเลือก feat หรือจาก class features, และไม่สามารถคัดลอกโดย Wish หรือ
           Mizzium Apparatus<br>
           ⚠️ เวทย์ที่จะศึกษาและใช้ ต้องเป็นเวทย์ที่ตัวละครสามารถใช้ได้ในเลเวลนั้นๆ<br>
-          ตัวละครสามารถรับโบนัส +1 ได้โดยจ่ายทองเพิ่ม <span class="text-yellow-400">100 gp</span>
-          โดยสามารถได้รับโบนัสได้มากสุดที่ +6<br>
           ⚠️ เมื่อทำการศึกษาสำเร็จ ตัวละครสามารถเพิ่มเวทย์เหล่านั้นในตัวได้ ไม่ว่าจะโดย prepare, เพิ่มใส่ spellbook,
           หรือแทนที่เวทย์ที่มีอยู่แล้วก่อนหน้า โดยขึ้นอยู่กับว่าตัวละครอยู่ในคลาสอะไร<br>
           ⚠️ เนื่องจากเวทย์เหล่านี้ใช้ Delirium เป็นวัตถุดิบหลักในการร่าย scrolls และ spellwrought tattoos
@@ -305,7 +303,7 @@
       <h3 class="text-xl font-bold mb-2 text-purple-300">การคัดลอกเวทมนตร์ลงใน Spellbook:</h3>
       <p class="text-gray-300 mb-4">
         เมื่อตัวละครพบเวทย์มนต์ของ Wizard ที่มีเลเวล 1 หรือมากกว่า ตัวละครสามารถเพิ่มเวทย์มนต์เหล่านั้นลง Spellbook ของพวกเขาได้ โดยทุก 1 เลเวลของเวทย์มนต์นั้นๆ<br>
-        ตัวละครต้องใช้เวลาประมาณ 2 ชั่วโมงและทอง <span class="text-yellow-400">50 gp</span><br>
+        ตัวละครต้องใช้เวลาประมาณ <span class="text-orange-400">2 ชั่วโมง</span>และทอง <span class="text-yellow-400">50 gp</span><br>
         (ค่าใช้จ่ายและเวลาสามารถลดลงครึ่งนึงได้ในบางกรณี)
       </p>
 
