--- a/create-character.html
+++ b/create-character.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>สร้างตัวละคร | The Spire Tower</title>
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com "></script>
@@ -15,12 +16,16 @@
       background: #0f0f1a;
       color: #e0e0ff;
     }
-    h1, h2, .medieval {
+
+    h1,
+    h2,
+    .medieval {
       font-family: 'MedievalSharp', cursive;
       color: #d8b4fe;
     }
   </style>
 </head>
+
 <body class="min-h-screen flex flex-col bg-gray-900">
 
   <!-- Navbar -->
@@ -64,18 +69,16 @@
 
     <div class="bg-gray-800 p-6 sm:p-8 rounded-xl shadow-lg">
       <p class="text-base sm:text-lg leading-relaxed space-y-3">
-        <span class="block">1. ทำสำเนาไฟล์จาก 
-          <a href=" https://docs.google.com/spreadsheets/d/1dvQ9WB0muYBLnrZqVhT9YRBcgpCXGQlBwR1rMwuqg6s/edit?usp=sharing" 
-             class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">
-            Character Tracking Sheet
-          </a> เพื่อใช้บันทึก session, ความคืบหน้า และเลเวลของตัวละคร
+        <span class="block">1. ทำสำเนาไฟล์จาก
+          <a href=" https://docs.google.com/spreadsheets/d/1dvQ9WB0muYBLnrZqVhT9YRBcgpCXGQlBwR1rMwuqg6s/edit?usp=sharing"
+            class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">
+            Character Tracking Sheet</a> เพื่อใช้บันทึก session, ความคืบหน้า และเลเวลของตัวละคร
         </span>
 
-        <span class="block">2. สร้างตัวละครเลเวล 3 โดยใช้ระบบ <strong>35 point buy</strong> ที่ 
-          <a href=" https://chicken-dinner.com/5e/5e-point-buy.html " 
-             class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">
-            [เว็บนี้]
-          </a> และใช้ระบบ fixed HP.<br>
+        <span class="block">2. สร้างตัวละครเลเวล 3 โดยใช้ระบบ <strong>35 point buy</strong> ที่
+          <a href=" https://chicken-dinner.com/5e/5e-point-buy.html "
+            class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">
+            [เว็บนี้]</a> และใช้ระบบ fixed HP.<br>
           <em class="text-yellow-300">* ห้ามกดเลือกเผ่าในเว็บที่ใช้เลือก stat</em>
         </span>
 
@@ -120,4 +123,5 @@
     });
   </script>
 </body>
+
 </html>
