--- a/spells-research.html
+++ b/spells-research.html
@@ -294,7 +294,7 @@
     <!-- Wizard-specific spell rules -->
     <h2 class="text-3xl font-semibold mb-6 flex items-center text-yellow-300">
       <span class="w-3 h-3 bg-yellow-500 rounded-full mr-3"></span>
-      คัตลอกรถเวทย์มนต์สำหรับ Wizard:
+      คัดลอกรถเวทย์มนต์สำหรับ Wizard:
     </h2>
 
     <div class="bg-slate-800 bg-opacity-70 p-6 rounded-xl shadow-lg border border-slate-700">
