--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li><a href="rules-system.html" class="text-gray-300 hover:text-purple-300 transition">activities</a></li>
         <li><a href="spells-research.html" class="text-gray-300 hover:text-purple-300 transition">spells-research</a>
         </li>
-        <li><a href="world-map.html" class="text-gray-300 hover:text-purple-300 transition">world map</a></li>
+        <li><a href="avrae-commands.html" class="text-gray-300 hover:text-purple-300 transition">avrae</a></li>
       </ul>
 
       <!-- Mobile Hamburger Button -->
