--- a/rules-system.html
+++ b/rules-system.html
@@ -40,7 +40,7 @@
         <a href="create-character.html" class="hover:text-purple-300 transition">สร้างตัวละคร</a>
         <a href="rules-system.html" class="font-bold hover:text-purple-300 transition">activities</a>
         <a href="spells-research.html" class="hover:text-purple-300 transition">spells-research</a>
-        <a href="world-map.html" class="hover:text-purple-300 transition">world map</a>
+        <a href="avrae-commands.html" class="hover:text-purple-300 transition">avrae</a>
       </div>
 
       <!-- Mobile Hamburger Button -->
