--- a/spells-research.html
+++ b/spells-research.html
@@ -33,13 +33,13 @@
 
       <!-- Desktop Menu (แสดงบน md ขึ้นไป) -->
       <ul class="hidden md:flex space-x-6">
-        <li><a href="index.html" class="text-purple-300 hover:text-purple-100 transition">หน้าแรก</a></li>
+        <li><a href="index.html" class="text-gray-300 hover:text-purple-100 transition">หน้าแรก</a></li>
         <li><a href="create-character.html" class="text-gray-300 hover:text-purple-300 transition">สร้างตัวละคร</a></li>
         <li><a href="rules-system.html" class="text-gray-300 hover:text-purple-300 transition">activities</a></li>
         <li><a href="spells-research.html"
             class="font-bold text-gray-300 hover:text-purple-300 transition">spells-research</a>
         </li>
-        <li><a href="world-map.html" class="text-gray-300 hover:text-purple-300 transition">world map</a></li>
+        <li><a href="avrae-commands.html" class="text-gray-300 hover:text-purple-300 transition">avrae</a></li>
       </ul>
 
       <!-- Mobile Hamburger Button -->
