--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <a href="rules-system.html" class="block text-gray-300 hover:text-purple-300 transition py-2">activities</a>
       <a href="spells-research.html"
         class="block text-gray-300 hover:text-purple-300 transition py-2">spells-research</a>
-      <a href="world-map.html" class="block text-gray-300 hover:text-purple-300 transition py-2">world map</a>
+      <a href="avrae-commands.html" class="block text-gray-300 hover:text-purple-300 transition py-2">avrae</a>
     </div>
   </nav>
 
