--- a/rules-system.html
+++ b/rules-system.html
@@ -59,7 +59,7 @@
       <a href="create-character.html" class="block py-2 hover:text-purple-300 transition">สร้างตัวละคร</a>
       <a href="rules-system.html" class="block font-bold py-2 hover:text-purple-300 transition">activities</a>
       <a href="spells-research.html" class="block py-2 hover:text-purple-300 transition">spells-research</a>
-      <a href="world-map.html" class="block py-2 hover:text-purple-300 transition">world map</a>
+      <a href="avrae-commands.html" class="block py-2 hover:text-purple-300 transition">avrae</a>
     </div>
   </nav>
 
