--- a/spells-research.html
+++ b/spells-research.html
@@ -7,6 +7,9 @@
   <title>spells-research | The Spire Tower</title>
   <!-- Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com "></script>
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+  <!-- Custom Styles -->
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -29,7 +32,7 @@
   <nav class="bg-gray-900 border-b border-purple-800 shadow-lg sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
       <!-- Logo / Title -->
-      <h1 class="text-2xl font-bold">spells-research</h1>
+      <a class="text-xl sm:text-2xl medieval">spells-research</a>
 
       <!-- Desktop Menu (แสดงบน md ขึ้นไป) -->
       <ul class="hidden md:flex space-x-6">
@@ -60,7 +63,7 @@
       <a href="rules-system.html" class="block text-gray-300 hover:text-purple-300 transition py-2">activities</a>
       <a href="spells-research.html"
         class="font-bold block text-gray-300 hover:text-purple-300 transition py-2">spells-research</a>
-      <a href="world-map.html" class="block text-gray-300 hover:text-purple-300 transition py-2">world map</a>
+      <a href="avrae-commands.html" class="block text-gray-300 hover:text-purple-300 transition py-2">avrae</a>
     </div>
   </nav>
 
