--- a/avrae-commands.html
+++ b/avrae-commands.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avrae Commands | The Spire Tower</title>
+    <title>avrae | The Spire Tower</title>
     <script src="https://cdn.tailwindcss.com "></script>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
-    <script src=" https://cdn.jsdelivr.net/npm/alpinejs @3.x.x/dist/cdn.min.js" defer></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -36,7 +36,7 @@
     </style>
 </head>
 
-<body x-data="{ search: '' }" class="bg-gradient-to-br from-slate-900 to-slate-800 text-white min-h-screen">
+<body x-data="{ search: '' }" class="min-h-screen flex flex-col">
 
     <!-- Navbar -->
     <nav class="bg-gray-900 border-b border-purple-800 shadow-lg sticky top-0 z-50">
@@ -118,7 +118,7 @@
                             <td class="p-3 font-mono text-purple-300">!character [name]
                             </td>
                             <td>สลับตัวละครที่ใช้งาน</td>
-                            <td><code>!char list</code>, <code>!char delete</code></td>
+                            <td></td>
                         </tr>
                         <tr x-show="!search || '!sheet'.includes(search.toLowerCase())">
                             <td class="p-3 font-mono text-purple-300">!sheet</td>
